# arcaflow-plugin-example

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yaml
arcaflow_plugin_example/: example_plugin.py
fixtures/: example.yaml
tests/: test_arcaflow_plugin_example.py  test_example_plugin.py
