[tool.poetry]
name = "arcaflow-plugin-example"
version = "0.1.0"
description = "Arcaflow Hello World Plugin"
authors = ["Arcalot Contributors"]
license = "Apache-2.0+GPL-2.0-only"
readme = "README.md"

packages = [{include ="arcaflow_plugin_example.py", from="./arcaflow_plugin_example"}]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.13.0"


[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
autoflake = "^2.0.2"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
